--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="author" content="Oskar Wickström" />
   <meta name="dcterms.date" content="2024-08-26" />
   <title>The Monospace Web</title>
-  <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/index.css" />
 </head>
 <body>
 <table class="header">
