--- a/index.html
+++ b/index.html
@@ -314,6 +314,6 @@ href="https://github.com/owickstrom/the-monospace-web">github.com/owickstrom/the
 href="https://x.com/usgraphics">U.S. Graphics Company</a> for all the
 inspiration.</p>
   <div class="debug-grid"></div>
-  <script src="index.js"></script>
+  <script src="assets/css/index.js"></script>
 </body>
 </html>
