--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <table class="header">
   <tr>
-    <td colspan="2" rowspan="2" class="width-auto">
+    <td colspan="2" rowspan="3" class="width-auto">
       <h1 class="title">Enter my cabin</h1>
       <span class="subtitle">Building in public. <br>Open 24/7</span>
     </td>
@@ -25,11 +25,11 @@
     <td class="width-min">2024-08-29</td>
   </tr>
   <tr>
-    <th class="width-min">Author</th>
+    <th>Author</th>
     <td class="width-min"><a href="https://x.com/davidbenq">@davidbenq</a></td>
   </tr>
 </table>
-<label class="debug-toggle-label"><input type="checkbox" class="debug-toggle" /> Debug mode</label>
+
 <nav id="TOC" role="doc-toc">
 <h2 id="toc-title">Contents</h2>
 <ul class="incremental">
