--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <table class="header">
   <tr>
-    <td colspan="2" rowspan="3" class="width-auto">
+    <td colspan="1" rowspan="3" class="width-auto">
       <h1 class="title">Enter my cabin</h1>
       <span class="subtitle">Building in public. <br>Open 24/7</span>
     </td>
@@ -26,7 +26,7 @@
   </tr>
   <tr>
     <th>Author</th>
-    <td class="width-min"><a href="https://x.com/davidbenq">@davidbenq</a></td>
+    <td class="width-min"><a href="https://x.com/davidbenq">@qohaelet</a></td>
   </tr>
 </table>
 
