--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Oskar Wickström" />
   <meta name="dcterms.date" content="2024-08-26" />
-  <title>The Monospace Web</title>
+  <title>qohaelet's cabin</title>
   <link rel="stylesheet" href="assets/css/reset.css" />
   <link rel="stylesheet" href="assets/css/index.css" />
 </head>
