--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <span class="subtitle">Building in public. <br>Open 24/7</span>
     </td>
     <th>Version</th>
-    <td class="width-min">v0.0.1</td>
+    <td colspan="2" class="width-min">v0.0.1</td>
   </tr>
   <tr>
     <th>Updated</th>
-    <td class="width-min">2024-08-29</td>
+    <td class="width-min">20240824</td>
   </tr>
   <tr>
     <th>Author</th>
-    <td class="width-min"><a href="https://x.com/davidbenq">@qohaelet</a></td>
+    <td class="width-min"><a href="https://x.com/qohaelet">@qohaelet</a></td>
   </tr>
 </table>
 
